--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,14 @@
-# Cohere API Key
-CO_API_KEY=yCL7ilHe5kHSa7oCb2Va5x0yU4sSpgB9YDQovTZF
+
+
+
+# User Configuration
+Username=Pasindu Kavishka Widushan
+Assistantname=Zyra
+
+
+
+
+AssistantVoice = en-CA-ClaraNeural
+
+InputLanguage = en
+
